@@ -1,0 +1,43 @@
+# Copyright 2012 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+if { [skip_cplus_tests] } { continue }
+
+standard_testfile .cc
+
+if {[prepare_for_testing $testfile.exp $testfile $srcfile {debug c++}]} {
+    return -1
+}
+
+if ![runto_main] then {
+    perror "couldn't run to breakpoint"
+    return
+}
+
+gdb_breakpoint ${srcfile}:[gdb_get_line_number "First breakpoint"]
+gdb_continue_to_breakpoint "continue to first breakpoint"
+gdb_test "print C::x" " = 23" "print C::x from first breakpoint"
+gdb_test "print B::b" " = 23" "print B::b from first breakpoint"
+gdb_test "print inner::z" " = 0" "print inner::z from first breakpoint"
+
+gdb_breakpoint ${srcfile}:[gdb_get_line_number "Second breakpoint"]
+gdb_continue_to_breakpoint "continue to second breakpoint"
+gdb_test "print C::x" " = 23" "print C::x from second breakpoint"
+gdb_test "print B::b" " = 23" "print B::b from second breakpoint"
+gdb_test "print inner::z" " = 0" "print inner::z from second breakpoint"
+
+gdb_breakpoint ${srcfile}:[gdb_get_line_number "Third breakpoint"]
+gdb_continue_to_breakpoint "continue to third breakpoint"
+gdb_test "print Templ<int>::y" " = 23" "print Templ::y from third breakpoint"
