@@ -1,5 +1,10 @@
 2012-12-14  Tom Tromey  <tromey@redhat.com>
 
+	* gdb.cp/member-name.exp: New file.
+	* gdb.cp/member-name.cc: New file.
+
+2012-12-14  Tom Tromey  <tromey@redhat.com>
+
 	* gdb.cp/templates.exp (test_ptype_of_templates): Update kfails.
 
 2012-12-14  Doug Evans  <dje@google.com>
